--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20260227020644">
+	<link rel="stylesheet" href="css/style.min.css?_v=20260227134259">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20260227020644"></script> -->
-	<!-- <script src="js/files/jquery.rotating-slider.min.js?_v=20260227020644"></script> -->
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20260227134259"></script> -->
+	<!-- <script src="js/files/jquery.rotating-slider.min.js?_v=20260227134259"></script> -->
 </head>
 
 <body style="display: none;">
@@ -940,6 +940,7 @@
 
 			<section class="section section--parallax">
 				<div class="section--parallax__slider swiper">
+
 					<div class="section--parallax__wrapper swiper-wrapper">
 						<div class="section--parallax__slide swiper-slide">
 							<div class="inner-parallax">
@@ -1012,19 +1013,16 @@
 									<button type="button" class="inner-parallax__more-btn actives">
 										<img src="img/letters/more.webp" alt="image">
 									</button>
-									<div class="inner-parallax__pagin">
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
+									<div class="inner-parallax__buttons">
+
+
+
+										<div class="inner-parallax__pagin">
+										</div>
+
+										<div class="section--parallax__nav-down">
+											<img src="img/letters/arrow.webp" alt="image">
+										</div>
 									</div>
 								</div>
 
@@ -1035,10 +1033,10 @@
 							<div class="inner-parallax">
 
 								<div class="inner-parallax__layers parallax-layers">
-									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-three.webp);" data-swiper-parallax="40%"></div>
-									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-three-2.webp);" data-swiper-parallax="30%"></div>
-									<canvas class="particles parallax-layers__layer" data-color="#00eeff" data-swiper-parallax="20%"></canvas>
-									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-three-3.webp);" data-swiper-parallax="10%"></div>
+									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-four.webp);" data-swiper-parallax="40%"></div>
+									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-four-2.webp);" data-swiper-parallax="30%"></div>
+									<canvas class="particles parallax-layers__layer" data-color="#3f25eb;" data-swiper-parallax="20%"></canvas>
+									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-four-3.webp);" data-swiper-parallax="10%"></div>
 								</div>
 
 								<div class="inner-parallax__container">
@@ -1067,31 +1065,134 @@
 									</div>
 
 									<div class="inner-parallax__content">
-										<div class="inner-parallax__text">Lorem ipsum, dolor sit amet consectetur
-											adipisicing elit.
-											At quis, pariatur dignissimos iste culpa, rerum perferendis dolorem veniam
-											sit
-											consectetur voluptatum voluptatibus fugiat quo consequatur, id reiciendis
-											rem tenetur
-											facilis?</div>
+										<div class="inner-parallax__cubes">
+
+											<div class="cube-container">
+												<div class="cube-box">
+													<div class="cube-face front">
+														<svg>
+															<use xlink:href="img/icons/icons.svg#cube-html"></use>
+														</svg>
+													</div>
+													<div class="cube-face side"><span>Уверенные знания HTML5 и
+															CSS</span></div>
+												</div>
+											</div>
+											<div class="cube-container">
+												<div class="cube-box">
+													<div class="cube-face front">
+														<svg>
+															<use xlink:href="img/icons/icons.svg#cube-sass"></use>
+														</svg>
+													</div>
+													<div class="cube-face side"><span>Использование препроцессоров
+															SASS/SCSS</span></div>
+												</div>
+											</div>
+											<div class="cube-container">
+												<div class="cube-box">
+													<div class="cube-face front">
+														<svg>
+															<use xlink:href="img/icons/icons.svg#cube-git"></use>
+														</svg>
+													</div>
+													<div class="cube-face side"><span>Умение работать с системой
+															контроля версий Git</span></div>
+												</div>
+											</div>
+											<div class="cube-container">
+												<div class="cube-box">
+													<div class="cube-face front">
+														<svg>
+															<use xlink:href="img/icons/icons.svg#cube-adaptive"></use>
+														</svg>
+													</div>
+													<div class="cube-face side"><span>Адаптивная вёрстка</span></div>
+												</div>
+											</div>
+											<div class="cube-container">
+												<div class="cube-box">
+													<div class="cube-face front">
+														<svg>
+															<use xlink:href="img/icons/icons.svg#cube-gulp"></use>
+														</svg>
+													</div>
+													<div class="cube-face side"><span>Использование таск-менеджера
+															Gulp</span></div>
+												</div>
+											</div>
+											<div class="cube-container">
+												<div class="cube-box">
+													<div class="cube-face front">
+														<svg>
+															<use xlink:href="img/icons/icons.svg#cube-bem"></use>
+														</svg>
+													</div>
+													<div class="cube-face side"><span>Использование БЭМ-нейминга</span>
+													</div>
+												</div>
+											</div>
+											<div class="cube-container">
+												<div class="cube-box">
+													<div class="cube-face front">
+														<svg>
+															<use xlink:href="img/icons/icons.svg#cube-figma"></use>
+														</svg>
+													</div>
+													<div class="cube-face side"><span>Работа в Figma</span></div>
+												</div>
+											</div>
+											<div class="cube-container">
+												<div class="cube-box">
+													<div class="cube-face front">
+														<svg>
+															<use xlink:href="img/icons/icons.svg#cube-pixel"></use>
+														</svg>
+													</div>
+													<div class="cube-face side"><span>Умение верстать
+															PixelPerfect.</span></div>
+												</div>
+											</div>
+											<div class="cube-container">
+												<div class="cube-box">
+													<div class="cube-face front">
+														<svg>
+															<use xlink:href="img/icons/icons.svg#cube-grid"></use>
+														</svg>
+													</div>
+													<div class="cube-face side"><span>Использование Flexbox и
+															Grid.</span></div>
+												</div>
+											</div>
+											<div class="cube-container">
+												<div class="cube-box">
+													<div class="cube-face front">
+														<svg>
+															<use xlink:href="img/icons/icons.svg#cube-js"></use>
+														</svg>
+													</div>
+													<div class="cube-face side"><span>Навыки работы с JS</span></div>
+												</div>
+											</div>
+
+										</div>
 									</div>
 
 									<button type="button" class="inner-parallax__more-btn actives">
 										<img src="img/letters/more.webp" alt="image">
 									</button>
-									<div class="inner-parallax__pagin">
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
+									<div class="inner-parallax__buttons">
+
+										<div class="section--parallax__nav-up">
+											<img src="img/letters/arrow.webp" alt="image">
+										</div>
+
+										<div class="inner-parallax__pagin">
+										</div>
+
+										<div class="section--parallax__nav-down">
+											<img src="img/letters/arrow.webp" alt="image">
+										</div>
 									</div>
 								</div>
 
@@ -1108,7 +1209,7 @@
 									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-two-3.webp);" data-swiper-parallax="10%"></div>
 								</div>
 
-								<div class="inner-parallax__container">
+								<div class="inner-parallax__container inner-parallax__container--works">
 									<div class="letters">
 										<div class="letters__wrapper">
 											<div style="width: 28px;" class="letters__letter letters__letter--up">
@@ -1133,32 +1234,84 @@
 										</div>
 									</div>
 
-									<div class="inner-parallax__content">
-										<div class="inner-parallax__text">Lorem ipsum, dolor sit amet consectetur
-											adipisicing elit.
-											At quis, pariatur dignissimos iste culpa, rerum perferendis dolorem veniam
-											sit
-											consectetur voluptatum voluptatibus fugiat quo consequatur, id reiciendis
-											rem tenetur
-											facilis?</div>
+									<div class="inner-parallax__content inner-parallax__content--works">
+										<div class="inner-parallax__text inner-parallax__text--works">
+											<ul class="inner-parallax__list">
+												<li class="inner-parallax__item">
+													<a href="https://denissaliukov.github.io/technoserviceport/" target="_blank">
+														<picture>
+															<source media="(min-width: 600px)" srcset="img/technoservis.webp">
+															<source media="(max-width: 600px)" srcset="img/technoservice-small.webp">
+															<img src="img/technoservis.webp" alt="image">
+														</picture>
+
+														<div class="works__label"><span>Многостраничник</span></div>
+													</a>
+												</li>
+												<li class="inner-parallax__item">
+													<a href="https://denissaliukov.github.io/oknahaus/" target="_blank">
+														<picture>
+															<source media="(min-width: 600px)" srcset="img/okna.webp">
+															<source media="(max-width: 600px)" srcset="img/okna-small.webp">
+															<img src="img/okna.webp" alt="image">
+														</picture>
+
+														<div class="works__label"><span>Лэндинг</span></div>
+													</a>
+												</li>
+												<li class="inner-parallax__item">
+													<a href="https://denissaliukov.github.io/tehnowood/" target="_blank">
+														<picture>
+															<source media="(min-width: 600px)" srcset="img/tehnowood.webp">
+															<source media="(max-width: 600px)" srcset="img/mebel-small.webp">
+															<img src="img/tehnowood.webp" alt="image">
+														</picture>
+
+														<div class="works__label"><span>Многостраничник</span></div>
+													</a>
+												</li>
+												<li class="inner-parallax__item">
+													<a href="https://denissaliukov.github.io/zlatmax/" target="_blank">
+														<picture>
+															<source media="(min-width: 600px)" srcset="img/zlatmax.webp">
+															<source media="(max-width: 600px)" srcset="img/zlatmax-small.webp">
+															<img src="img/zlatmax.webp" alt="image">
+														</picture>
+
+														<div class="works__label"><span>Интернет-магазин</span></div>
+													</a>
+												</li>
+												<li class="inner-parallax__item">
+													<a href="https://denissaliukov.github.io/audiomaster/" target="_blank">
+														<picture>
+															<source media="(min-width: 600px)" srcset="img/audiomaster.webp">
+															<source media="(max-width: 600px)" srcset="img/audio-small.webp">
+															<img src="img/audiomaster.webp" alt="image">
+														</picture>
+
+														<div class="works__label"><span>Интернет-магазин</span></div>
+													</a>
+												</li>
+											</ul>
+
+										</div>
 									</div>
 
 									<button type="button" class="inner-parallax__more-btn actives">
 										<img src="img/letters/more.webp" alt="image">
 									</button>
-									<div class="inner-parallax__pagin">
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
+									<div class="inner-parallax__buttons">
+
+										<div class="section--parallax__nav-up">
+											<img src="img/letters/arrow.webp" alt="image">
+										</div>
+
+										<div class="inner-parallax__pagin">
+										</div>
+
+										<div class="section--parallax__nav-down">
+											<img src="img/letters/arrow.webp" alt="image">
+										</div>
 									</div>
 								</div>
 
@@ -1169,7 +1322,8 @@
 							<div class="inner-parallax">
 
 								<div class="inner-parallax__layers parallax-layers">
-									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-five.webp);" data-swiper-parallax="40%"></div>
+									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-five.webp);" data-swiper-parallax="40%">
+									</div>
 									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-five-2.webp);" data-swiper-parallax="30%"></div>
 									<canvas class="particles parallax-layers__layer" data-color="#00eeff" data-swiper-parallax="20%"></canvas>
 									<div class="parallax-layers__layer" style="background-image: url(img/parallax/slide-five-3.webp);" data-swiper-parallax="10%"></div>
@@ -1207,32 +1361,51 @@
 									</div>
 
 									<div class="inner-parallax__content">
-										<div class="inner-parallax__text">Lorem ipsum, dolor sit amet consectetur
-											adipisicing elit.
-											At quis, pariatur dignissimos iste culpa, rerum perferendis dolorem veniam
-											sit
-											consectetur voluptatum voluptatibus fugiat quo consequatur, id reiciendis
-											rem tenetur
-											facilis?</div>
+										<div class="inner-parallax__text">
+											<div class="inner-parallax__container">
+												<div class="violet__text-inner">
+
+													<h2 class="violet__slogan">Связаться со мной можно любым, удобным
+														для
+														Вас способом.
+													</h2>
+													<ul class="violet__contact-list">
+														<li class="violet__contact-item">
+															<img src="img/email.webp" alt="logo"><span data-ripple>denis_saliukov@yahoo.com</span>
+														</li>
+														<li class="violet__contact-item">
+															<a href="https://wa.me/79131688553"><img src="img/whatsapp.webp" alt="logo">WhatsApp</a>
+														</li>
+														<li class="violet__contact-item"><a href="https://t.me/DanPelikan"><img src="img/Telegram_Messenger.webp" alt="logo"><span>Telegram</span></a>
+														</li>
+														<li class="violet__contact-item">
+															<a href="https://vk.com/presque_vu_jd"><img src="img/vk.webp" alt="logo"><span>ВКонтакте</span></a>
+														</li>
+														<li class="violet__contact-item">
+															<a href="https://max.ru/u/f9LHodD0cOIRtHguZET3mZi6e-E0CVIQS2w5fxkjt8OWBF_hL1uCVoS95A0"><img src="img/Max_logo_2025.webp" alt="logo"><span>MAX</span></a>
+														</li>
+													</ul>
+
+												</div>
+											</div>
+
+										</div>
 									</div>
 
 									<button type="button" class="inner-parallax__more-btn actives">
 										<img src="img/letters/more.webp" alt="image">
 									</button>
-									<div class="inner-parallax__pagin">
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
-										<button type="button" class="inner-parallax__pagin-btn">
-											<img src="img/letters/ring.webp" alt="image">
-										</button>
+									<div class="inner-parallax__buttons">
+
+										<div class="section--parallax__nav-up">
+											<img src="img/letters/arrow.webp" alt="image">
+										</div>
+
+										<div class="inner-parallax__pagin">
+										</div>
+
 									</div>
+
 								</div>
 
 
@@ -1258,7 +1431,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20260227020644"></script>
+	<script src="js/app.min.js?_v=20260227134259"></script>
 	<div id="popup-violet" aria-hidden="true" class="popup">
 		<div class="popup__wrapper">
 			<div class="popup__content">
